# StackAI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  config.py  logging_config.py  main.py
app/models/: __init__.py  chunk.py  document.py  enums.py  library.py  search.py
app/routers/: __init__.py  chunks.py  documents.py  libraries.py  search.py
app/services/: __init__.py  embeddings.py  search_service.py  storage_service.py
app/services/indexes/: __init__.py  base.py  flat_index.py  ivf_index.py  sequential_kmeans.py  utils.py
app/storage/: __init__.py  base_store.py  chunk_store.py  document_store.py  file_io_utils.py  flat_index_store.py  index_store.py  ivf_index_store.py  library_store.py  rwlock.py
client/: __init__.py
loadtests/: common.py  locust_mixed.py  locust_reads.py  locust_search.py  locust_writes.py
notebooks/: index_comparison.ipynb  vector_database_exploration.ipynb
scripts/: cleanup_loadtest.py  seed_data.py
tests/: __init__.py  test_chunks_batch.py  test_documents.py  test_flat_index.py  test_ivf_index.py  test_libraries.py  test_persistence.py  test_search.py
