[project]
name = "stackai"
version = "0.1.0"
description = "A vector database API built with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere>=5.20.0",
    "fastapi>=0.121.2",
    "numpy>=2.3.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]
